--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 </div>
                 <div class="action-bar">
                     <div class="action-item">
-                        <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Profile" class="profile-pic">
+                        <img src="lovely.jpg" class="profile-pic">
                     </div>
                     <div class="action-item like-btn">
                         <div class="action-icon">
