--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <!-- Video 1 -->
         <div class="video-container">
             <video class="video-player" loop muted playsinline>
-                <source src="https://assets.mixkit.co/videos/preview/mixkit-woman-in-a-field-of-flowers-1197-large.mp4" type="video/mp4">
+                <source src="https://www.pexels.com/id-id/download/video/30601095/" type="video/mp4">
             </video>
             <div class="video-overlay">
                 <div class="video-info">
