--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <!-- Video 2 -->
         <div class="video-container">
             <video class="video-player" loop muted playsinline>
-                <source src="https://assets.mixkit.co/videos/preview/mixkit-girl-in-neon-sign-1232-large.mp4" type="video/mp4">
+                <source src="https://www.pexels.com/id-id/download/video/30601095/" type="video/mp4">
             </video>
             <div class="video-overlay">
                 <div class="video-info">
@@ -322,7 +322,7 @@
         <!-- Video 3 -->
         <div class="video-container">
             <video class="video-player" loop muted playsinline>
-                <source src="https://assets.mixkit.co/videos/preview/mixkit-woman-dancing-in-a-pink-tutu-39878-large.mp4" type="video/mp4">
+                <source src="https://www.pexels.com/id-id/download/video/30601095/" type="video/mp4">
             </video>
             <div class="video-overlay">
                 <div class="video-info">
